# LAWBOSS

./: .env.example  .gitignore  .mcp.json  CEO-PLAN-REVIEW.md  CEO-PLAN.md  PRD.md  README.md  docker-compose.yml  progress.md  round-1.md  tasks.md
.github/workflows/: build-mcp.yml  ci.yml
backend/: requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  feedback.py  report.py  rule.py  stripe_event.py  user.py
backend/app/routers/: admin_rules.py  billing.py  check.py  erp.py  feedback.py  image.py  llm_config.py  mcp.py  platform.py  regulation.py  report.py  webhooks.py
backend/app/schemas/: billing.py  check.py  common.py  llm_config.py  rule.py
backend/app/utils/: converters.py  (+1 more)
backend/data/: user_quotas.json
backend/tests/: conftest.py  test_api.py  test_auth_feedback.py  test_billing.py  test_compliance_checker.py  test_llm_config.py  test_quota.py  test_rules.py  test_webhooks.py
desktop/: electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
desktop/resources/: generate-icons.js  installer.nsh
docs/: design.md  spec.md  tasks.md  出海法盾_CrossGuard_商业计划书.docx
docs/designs/: crossguard-design-2026-05-10.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
mcp-server/: README.md  cli.py  crossguard_mcp_http.py  crossguard_mcp_server.py  pyproject.toml
mcp-server/tests/: test_mcp.py
scripts/: build-binary.sh  generate_business_plan.py  install.ps1  install.sh
(+143 files in other folders)
