[project]
name = "crossguard-mcp"
version = "0.2.0"
description = "CrossGuard MCP Server — AI-powered cross-border e-commerce compliance checking for AI agents"
authors = [{name = "CrossGuard Team", email = "support@crossguard.ai"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["mcp", "compliance", "e-commerce", "cross-border", "ai-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "starlette>=0.37.0",
    "uvicorn>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
crossguard = "cli:main"

[project.urls]
Homepage = "https://github.com/23xxCh/LAWBOSS"
Documentation = "https://github.com/23xxCh/LAWBOSS#readme"
Repository = "https://github.com/23xxCh/LAWBOSS"
Issues = "https://github.com/23xxCh/LAWBOSS/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
